fix: form styles and alignments fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,11 +156,17 @@ html {
 }
 .login__logo {
   width: 45%;
-  margin-top: 1rem;
+  margin: 3rem;
 }
 .login__support {
   font-size: 0.75rem;
   margin-top: auto;
+  display: flex;
+  gap: 0.25rem;
+}
+.login__tel {
+  direction: ltr;
+  display: block;
 }
 .login__image-wrapper {
   width: 50%;
@@ -174,7 +180,19 @@ html {
 }
 
 .form {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
   width: 60%;
+  gap: 2rem;
+}
+.form__form-control {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  gap: 0.25rem;
 }
 .form__input, .form__submit {
   border-radius: 0.4rem;
@@ -182,14 +200,12 @@ html {
   width: 100%;
   height: 3rem;
   padding: 0 0.5rem;
-  margin: 0.5rem 0;
 }
 .form label {
   color: #3c4351;
 }
 .form__input {
   background-color: #f9fafb;
-  margin-bottom: 1.25rem;
   text-align: right;
   color: #3c4351;
   font-size: 14px;
