--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -29,12 +29,19 @@
 
   &__logo {
     width: 45%;
-    margin-top: 1rem;
+    margin: 3rem;
   }
 
   &__support {
     font-size: 0.75rem;
     margin-top: auto;
+    display: flex;
+    gap: 0.25rem;
+  }
+
+  &__tel {
+    direction: ltr;
+    display: block;
   }
 
   &__image-wrapper {
@@ -51,9 +58,16 @@
 }
 
 .form {
+  @include flex($direction: column, $align: stretch);
   $bg-color: #f9fafb;
   $text-color: #3c4351;
   width: 60%;
+  gap: 2rem;
+
+  &__form-control {
+    @include flex($direction: column, $align: stretch);
+    gap: 0.25rem;
+  }
 
   &__input,
   &__submit {
@@ -62,14 +76,14 @@
     width: 100%;
     height: 3rem;
     padding: 0 0.5rem;
-    margin: 0.5rem 0;
   }
+
   & label {
     color: $text-color;
   }
+
   &__input {
     background-color: $bg-color;
-    margin-bottom: 1.25rem;
     text-align: right;
     color: $text-color;
     font-size: 14px;
